2017-08-02  Sam Steingold  <sds@gnu.org>

	* makemake.in (gllib/libgnu.a): Depend on build-aux.

2017-07-31  Sam Steingold  <sds@gnu.org>

	Implement RFE#52: add (declare (dynamically-modifiable)).
	* clos-genfun1.lisp (generic-function): Add slot
	$DYNAMICALLY-MODIFIABLE.
	* clos-genfun2b.lisp (+gf-declarations+): New constant.
	(check-gf-declspecs): Use it.
	(std-add-method): Use GF-DYNAMICALLY-MODIFIABLE instead of
	*DYNAMICALLY-MODIFIABLE-GENERIC-FUNCTION-NAMES* to disable warnings.
	(gf-set-dynamically-modifiable): New function.
	(initialize-instance-<generic-function>)
	(reinitialize-instance-<generic-function>): Use it.
	(*dynamically-modifiable-generic-function-names*): Remove.
	(need-gf-already-called-warning-p): Use GF-DYNAMICALLY-MODIFIABLE
	instead of *DYNAMICALLY-MODIFIABLE-GENERIC-FUNCTION-NAMES*.
	* clos-package.lisp, init.lisp: Export DYNAMICALLY-MODIFIABLE.
	* compiler.lisp (*declaration-types*): Add DYNAMICALLY-MODIFIABLE.
	(process-declarations): Handle DYNAMICALLY-MODIFIABLE.
	* clos-genfun4.lisp (no-applicable-method, no-primary-method)
	(no-next-method, find-method, add-method, remove-method)
	(compute-discriminating-function, compute-applicable-methods)
	(compute-applicable-methods-using-classes)
	(compute-effective-method): Declare dynamically-modifiable.
	* clos-genfun5.lisp (ensure-generic-function-using-class): Ditto.
	* clos-method3.lisp (method-qualifiers, method-generic-function)
	((setf method-generic-function), function-keywords): Ditto.
	* clos-class5.lisp (shared-initialize, reinitialize-instance)
	(initialize-instance, allocate-instance, make-instance)
	(dynamically-modifiable, update-instance-for-different-class)
	(make-instances-obsolete, update-instance-for-redefined-class): Ditto.
	* clos-class6.lisp (class-name, (setf class-name))
	(class-direct-subclasses, class-direct-superclasses)
	(compute-direct-slot-definition-initargs)
	(compute-class-precedence-list)
	(compute-effective-slot-definition-initargs)