@@ -415,9 +415,9 @@
         (generic-function-lambda-list-to-signature lambdalist
           #'(lambda (lalist detail errorstring &rest arguments)
               (sys::lambda-list-error lalist detail
-                 (TEXT "Invalid ~S result ~S: ~A")
+                 (TEXT "Invalid ~S result ~S: ~?")
                  'generic-function-lambda-list lambdalist
-                 (apply #'format nil errorstring arguments))))))
+                 errorstring arguments)))))
     (:method ((gf standard-generic-function))
       (check-generic-function-initialized gf)
       (check-gf-lambda-list gf 'generic-function-signature)
@@ -471,9 +471,9 @@
         argument-precedence-order reqnum reqvars
         #'(lambda (detail errorstring &rest arguments)
             (declare (ignore detail))
-            (error (TEXT "Invalid ~S result ~S: ~A")
-                   'generic-function-argument-precedence-order argument-precedence-order
-                   (apply #'format nil errorstring arguments))))))
+            (error (TEXT "Invalid ~S result ~S: ~?")
+                   'generic-function-argument-precedence-order
+                   argument-precedence-order errorstring arguments)))))
   (:method ((gf standard-generic-function))
     (check-generic-function-initialized gf)
     (check-gf-lambda-list gf 'generic-function-argorder)
